# python-ai-examples

./: .gitattributes  .gitignore  README.md  main.py  manage.py  pyproject.toml
cnn/: cnn_basic.py  moire_detection.keras  moire_detection.py  moire_detection_test.py
cuda/: check_cuda.py
docs/: terminology.md  tutorials.md
machine_learning/: animated_linear_regression.py  interactive_linear_regression.py  real_diabetes_linear_regression.py  real_logistic_regression.py  real_price_linear_regression.py  sckit_linear_regression.py  sckit_logistic_regression.py  simple_k_means_cluster.py  simple_linear_regression.py  simple_linear_regression_2.py  simple_logistic_regression.py  tf_linear_regression.py
neural_network/: digit_recognition.py  digit_recognition_basic.py  digit_recognition_cnn.py  digit_recognition_mlp.py  digit_recognition_mlp_simple.py
perceptron/: perceptron.py  perceptrons.py  sample_generator.py
