[project]
name = "ai-workspace"
version = "0.1.0"
description = "Custom repo to work on ai related things"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.47.1",
    "tensorflow[and-cuda]>=2.18.0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.2"]

[project.scripts]
manage = "manage:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cnn"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
ignore_missing_imports = true # Ignore import-untyped error globally

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
